kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
    name: errors-shared-web

spec:
    errors:
        status:
            - "400"
            - "401"
            - "403"
            - "404"
            - "500"
            - "502"
            - "503"
            - "504"
        query: /errors/{status}?service=main-web
        service:
            name: web-v1
            namespace: sweetrpg-shared
            port: 8081
