kubernetes/overlays/dev/destination-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
    name: main-web

spec:
    host: web-v1.sweetrpg-main.svc.cluster.local
    trafficPolicy:
        loadBalancer:
            simple: LEAST_CONN
